# berdichevskaya_a_g

./: CMakeList.txt  Complex.cpp  Rational.cpp  complex.cpp  complex.h  complex_test.cpp
coursework/: CMakeLists.txt  cellbutton.h  cells.cpp  field_size.cpp  field_size.h  field_size.ui  game_state.cpp  game_state.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
coursework/work/: cells.cpp  cells.h  field_size.cpp  field_size.h  field_size.ui  game_state.cpp  game_state.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
labs/: CMakeList.txt
labs/complex/: CMakeList.txt  complex.cpp  complex.h  complex_test.cpp
labs/dinamic/: cmakelist.txt  dinamic.cpp  dinamic.h  dinamic_test.cpp
labs/matrix/: Matrix.h  cmakelist.txt  matrix.cpp  matrix_test.cpp
labs/queue_on_array/: CMakeList.txt  queue.cpp  queue.h  queue_test.cpp
labs/rational/: rational.cpp  rational.h  rational_test.cpp
labs/stack_on_list/: cmakelist.txt  stack.cpp  stack.h  stack_test.cpp
prj.labs/: CMakeList.txt
prj.labs/complex/: CMakeList.txt  complex.cpp
prj.labs/dinamic/: CMakeList.txt  cmakelist.txt  dinamic.cpp  dinamic.h  dinamic_test.cpp
prj.labs/matrix/: CMakeList.txt  matrix.cpp  matrix.h  matrix_test.cpp
prj.labs/priority_queue/: CMakeList.txt  priority_queue.cpp  priority_queue.h  priority_queue_test.cpp
prj.labs/queue_on_array/: CMakeList.txt  queue.cpp
prj.labs/rational/: rational.cpp  rational.h
prj.labs/stack_on_list/: CMakeList.txt  cmakelist.txt  stack.cpp  stack.h
prj.labs/template_array/: CMakeList.txt  template_array.h  template_array_test.cpp
(+7 files in other folders)
